--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 
     <script src="//cdn.jsdelivr.net/npm/phaser@3.23.0/dist/phaser.js"></script>
 
-    <script type="text/javascript" src="./src/js/niveles.js"></script>
+    <script type="text/javascript" src="./src/js/ball.js"></script>
+    <script type="text/javascript" src="./src/js/paddle.js"></script>
+    <script type="text/javascript" src="./src/js/carga.js"></script>
+    <script type="text/javascript" src="./src/js/nivel1.js"></script>
 
     <script type="text/javascript" src="game.js"></script>
 
